[gd_scene load_steps=16 format=2]

[ext_resource path="res://stage/Stage.gd" type="Script" id=1]
[ext_resource path="res://sprites/Fullscreens-3.png.png" type="Texture" id=2]
[ext_resource path="res://sprites/bar.png" type="Texture" id=3]
[ext_resource path="res://sprites/gems.png" type="Texture" id=4]
[ext_resource path="res://stage/MusicPlayer.gd" type="Script" id=5]
[ext_resource path="res://stage/MIDIParser.gd" type="Script" id=6]
[ext_resource path="res://sprites/text.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 350, 50 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 350, 50 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 400, 350, 50 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 57, 292.448, 224, 115 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( -6, 604.689, 308, 91 )

[node name="Stage" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BG" type="Sprite" parent="."]
position = Vector2( 300, 256 )
texture = ExtResource( 2 )

[node name="bar" type="Sprite" parent="."]
position = Vector2( 325.5, 420 )
texture = SubResource( 1 )

[node name="lane_input_0" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_1" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_2" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_3" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_4" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_5" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 2 )

[node name="lane_input_6" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 3 )

[node name="lane_input_7" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 2
texture = SubResource( 4 )

[node name="lane_input_8" type="Sprite" parent="."]
visible = false
position = Vector2( 150, 420 )
z_index = 1
texture = SubResource( 5 )

[node name="lane_input_9" type="Sprite" parent="."]
visible = false
position = Vector2( 0, 420 )
z_index = 1
texture = SubResource( 6 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
editor/display_folded = true
script = ExtResource( 5 )

[node name="start_timer" type="Timer" parent="MusicPlayer"]
wait_time = 2.0
one_shot = true

[node name="end_timer" type="Timer" parent="MusicPlayer"]
wait_time = 2.0
one_shot = true

[node name="MIDIParser" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="ScoreDisplay" type="RichTextLabel" parent="."]
margin_left = 65.0
margin_top = 10.0
margin_right = 149.0
margin_bottom = 25.0
text = "0"
scroll_active = false

[node name="SCORE" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 57.0
margin_bottom = 33.0
text = "SCORE:"
scroll_active = false

[node name="StreakDisplay" type="RichTextLabel" parent="."]
margin_left = 64.0
margin_top = 30.0
margin_right = 148.0
margin_bottom = 45.0
text = "0"
scroll_active = false

[node name="STREAK" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 30.0
margin_right = 60.0
margin_bottom = 45.0
text = "STREAK:"
scroll_active = false

[node name="PauseArrow" type="Sprite" parent="."]
visible = false
position = Vector2( 300, 325 )
scale = Vector2( 0.15, 0.15 )
z_index = 6
texture = SubResource( 7 )

[node name="PauseSprites" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 340, 320 )
z_index = 6

[node name="Pause" type="Sprite" parent="PauseSprites"]
position = Vector2( -15, -120 )
texture = SubResource( 8 )

[node name="RESUME" type="RichTextLabel" parent="PauseSprites"]
margin_right = 60.0
margin_bottom = 30.0
text = "RESUME"
scroll_active = false

[node name="EXIT" type="RichTextLabel" parent="PauseSprites"]
margin_top = 40.0
margin_right = 60.0
margin_bottom = 60.0
text = "EXIT"
scroll_active = false

[node name="Controls" type="RichTextLabel" parent="."]
margin_left = 10.0
margin_top = 465.0
margin_right = 144.0
margin_bottom = 488.0
text = "ENTER: Pause"
scroll_active = false
[connection signal="finished" from="MusicPlayer" to="MusicPlayer" method="_on_MusicPlayer_finished"]
[connection signal="timeout" from="MusicPlayer/start_timer" to="MusicPlayer" method="_on_start_timer_timeout"]
[connection signal="timeout" from="MusicPlayer/end_timer" to="MusicPlayer" method="_on_end_timer_timeout"]
